Add header, footer and burger menu

--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -10,23 +10,23 @@
         <a class="context-list-link" href="./index.html#home">Home</a>
       </li>
       <li class="context-list-item">
-        <a class="context-list-link" href="./index.html#about">What We Do</a>
+        <a class="context-list-link" href="./index.html#features">Features</a>
       </li>
       <li class="context-list-item">
-        <a class="context-list-link" href="./index.html#clients"
-          >Who It's For</a
+        <a class="context-list-link" href="./index.html#services">Services</a>
+      </li>
+      <li class="context-list-item">
+        <a class="context-list-link" href="./index.html#works">How It Works</a>
+      </li>
+      <li class="context-list-item">
+        <a class="context-list-link" href="./index.html#studies"
+          >Case Studies</a
         >
-      </li>
-      <li class="context-list-item">
-        <a class="context-list-link" href="./index.html#process">Process</a>
       </li>
       <li class="context-list-item">
         <a class="context-list-link" href="./index.html#testimonials"
           >Testimonials</a
         >
-      </li>
-      <li class="context-list-item">
-        <a class="context-list-link" href="./index.html#pricing">Pricing</a>
       </li>
       <li class="context-list-item">
         <a class="context-list-link" href="./index.html#contact">Contact</a>
