--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,30 +2,33 @@
   <div class="container header-container">
     <nav class="nav">
       <a class="header-logo-link" href="./">
-        <svg class="logo-icon" width="101" height="19">
-          <use href="./img/sprite.svg#icon-logo"></use>
-        </svg>
+        <img
+          src="./img/header/header-logo.png"
+          alt="Logo"
+          width="124"
+          height="22"
+        />
       </a>
       <ul class="nav-list">
         <li class="nav-list-item">
           <a class="nav-list-link" href="./index.html#home">Home</a>
         </li>
         <li class="nav-list-item">
-          <a class="nav-list-link" href="./index.html#about">What We Do</a>
+          <a class="nav-list-link" href="./index.html#features">Features</a>
         </li>
         <li class="nav-list-item">
-          <a class="nav-list-link" href="./index.html#clients">Who It's For</a>
+          <a class="nav-list-link" href="./index.html#services">Services</a>
         </li>
         <li class="nav-list-item">
-          <a class="nav-list-link" href="./index.html#process">Process</a>
+          <a class="nav-list-link" href="./index.html#works">How It Works</a>
+        </li>
+        <li class="nav-list-item">
+          <a class="nav-list-link" href="./index.html#studies">Case Studies</a>
         </li>
         <li class="nav-list-item">
           <a class="nav-list-link" href="./index.html#testimonials"
             >Testimonials</a
           >
-        </li>
-        <li class="nav-list-item">
-          <a class="nav-list-link" href="./index.html#pricing">Pricing</a>
         </li>
         <li class="nav-list-item">
           <a class="nav-list-link" href="./index.html#contact">Contact</a>
