--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -1,21 +1,7 @@
 .footer {
-  background: #126fff;
-}
-
-.footer-wrapper {
+  background: #3c234f;
   padding-top: 40px;
   padding-bottom: 16px;
-  background-image: url(../img/footer/footer-bg-mob.png);
-  background-repeat: no-repeat;
-  background-position: top right;
-  background-size: auto;
-  max-width: 375px;
-  margin: 0 auto;
-
-  @include media(desktop) {
-    background-image: url(../img/footer/footer-bg-desk.png);
-    max-width: 1440px;
-  }
 }
 
 .footer-nav {
@@ -25,15 +11,16 @@
 .footer-list {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: end;
   gap: 16px;
 }
 
 .footer-link {
-  font-family: 'Figtree', sans-serif;
+  font-family: 'Teachers', sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
+  text-align: right;
   color: #fff;
   transition: all 0.3s ease-in-out;
 
@@ -47,11 +34,11 @@
 }
 
 .footer-text {
-  font-family: 'Figtree', sans-serif;
+  font-family: 'Teachers', sans-serif;
   font-weight: 400;
   font-size: 11px;
   line-height: 1.5;
-  text-align: left;
+  text-align: right;
   color: #fff;
 
   @include media(desktop) {
