--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,5 +1,5 @@
 .header {
-  background: #efefef;
+  background: #fff;
   padding-top: 10px;
   padding-bottom: 10px;
   position: fixed;
@@ -38,19 +38,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 39px;
-    border: 1px solid #adb2d4;
-    border-radius: 24px;
-    padding: 8px 32px;
+    gap: 31px;
   }
 }
 
 .nav-list-link {
-  font-family: 'Figtree', sans-serif;
+  font-family: 'Teachers', sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.5;
-  color: #232533;
+  color: #3c234f;
   transition: all 0.3s ease-in-out;
 
   &:hover,
@@ -73,5 +70,4 @@
 }
 
 .menu-icon {
-  stroke: #232533;
 }
