--- a/src/scss/components/menu.scss
+++ b/src/scss/components/menu.scss
@@ -1,7 +1,7 @@
 .context-menu {
-  background: #fff;
-  border-radius: 16px;
-  padding: 30px;
+  background: #f0f0f0;
+  border-radius: 8px;
+  padding: 28px;
   max-width: 343px;
   width: 100%;
   margin: 0 auto;
@@ -51,15 +51,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 27px;
+  gap: 25px;
 }
 
 .context-list-link {
-  font-family: 'Figtree', sans-serif;
+  font-family: 'Teachers', sans-serif;
   font-weight: 500;
-  font-size: 22px;
+  font-size: 24px;
   line-height: 1.3;
-  color: #232533;
+  color: #3c234f;
   transition: all 0.3s ease-in-out;
 
   &:active {
