--- a/src/scss/components/hero.scss
+++ b/src/scss/components/hero.scss
@@ -20,66 +20,74 @@
 }
 
 .hero-title {
-  font-family: 'Figtree', sans-serif;
+  font-family: 'Teachers', sans-serif;
   font-weight: 600;
   font-size: 48px;
   line-height: 1.2;
-  color: #232533;
-  margin-bottom: 40px;
+  color: #9e54d7;
 
   @include media(desktop) {
-    font-size: 64px;
+    font-size: 72px;
   }
 }
 
-.hero-title-span {
-  color: #126fff;
+.hero-subtitle {
+  font-family: 'Teachers', sans-serif;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 1.2;
+  color: #3c234f;
+  margin-bottom: 40px;
+
+  @include media(desktop) {
+    font-size: 48px;
+  }
 }
 
 .hero-text {
-  font-family: 'Figtree', sans-serif;
+  font-family: 'Teachers', sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
-  color: #232533;
+  color: #3c234f;
   margin-bottom: 80px;
 
   @include media(desktop) {
     font-size: 18px;
     margin-bottom: 40px;
-    max-width: 832px;
+    max-width: 736px;
   }
 }
 
 .hero-btn-wrapper {
   @include media(desktop) {
-    max-width: 352px;
+    max-width: 256px;
     margin-left: 0;
   }
 }
 
 .hero-btn {
-  background: #126fff;
-  border-radius: 28px;
-  padding: 8px 24px;
+  background: #fcc000;
+  border-radius: 8px;
+  padding: 12px 24px;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: 'Figtree', sans-serif;
+  font-family: 'Teachers', sans-serif;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.5;
-  color: #fff;
+  color: #3c234f;
   width: 100%;
   transition: all 0.3s ease-in-out;
 
   &:active {
-    background: #3483fe;
+    background: #fffcc5;
   }
 
   @include media(desktop) {
     &:hover {
-      background: #3483fe;
+      background: #fffcc5;
     }
   }
 }
