--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,9 +3,9 @@
 @import './components/header.scss';
 @import './components/menu.scss';
 @import './components/hero.scss';
-@import './components/about.scss';
-@import './components/clients.scss';
-@import './components/process.scss';
+@import './components/features.scss';
+@import './components/services.scss';
+@import './components/works.scss';
 @import './components/testimonials.scss';
 @import './components/pricing.scss';
 @import './components/contact.scss';
