Add studies, testimonials, faq and contact sections

--- a/src/partials/features.html
+++ b/src/partials/features.html
@@ -1,4 +1,4 @@
-<section class="section features-section" id="home">
+<section class="section features-section" id="features">
   <div class="container features-container">
     <div class="section-title-wrapper">
       <span class="section-title-dot"></span>
