--- a/src/partials/works.html
+++ b/src/partials/works.html
@@ -1,4 +1,4 @@
-<section class="section works-section" id="home">
+<section class="section works-section" id="works">
   <div class="container works-container">
     <div class="works-bg-wrapper">
       <div class="section-title-wrapper">
