--- a/src/scss/components/banner.scss
+++ b/src/scss/components/banner.scss
@@ -1,5 +1,6 @@
 .cookie-banner-section {
-  background: #232533;
+  background: #3c234f;
+  border-radius: 32px;
   padding: 32px;
   width: 100%;
   max-width: 343px;
@@ -58,14 +59,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #fff;
+  background: #baf3ed;
   border-radius: 28px;
   padding: 12px;
   font-family: 'Inter', sans-serif;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.5;
-  color: #232533;
+  color: #3c234f;
   width: 100%;
   max-width: 256px;
 
