--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -1,26 +1,48 @@
 <section class="section contact-section" id="contact">
-  <div class="contact-wrapper">
-    <div class="container contact-container">
-      <h2 class="section-title">Contact</h2>
-      <h2 class="section-subtitle contact-subtitle">
-        Let's Plan Your Event — The Smart Way
-      </h2>
-      <p class="contact-text">
-        Have questions or need a quick diagnostic? We’re just one message away.
-      </p>
-      <p class="contact-email-text">
-        <span>Email:</span>
-        <a class="contact-email-link" href="mailto:info@eventlo.online"
-          >info@eventlo.online</a
-        >
-      </p>
-      <p class="contact-solials-text">Follow us on Social Media</p>
-      <p class="contact-hashtags-text">
-        Hashtags to use:
-        <span class="contact-hashtags-span"
-          >#eventlo #leanlaunch #smartevents #eventstrategy</span
-        >
-      </p>
+  <div class="container contact-container">
+    <div class="section-title-wrapper">
+      <span class="section-title-dot"></span>
+      <h2 class="section-title">Contact Us</h2>
     </div>
+    <p class="section-subtitle">Stay in Touch</p>
+    <p class="contact-text">
+      Ready to host your own competitive event or need help creating one?
+    </p>
+    <p class="contact-email-text">
+      <span>Email:</span>
+      <a class="contact-email-link" href="mailto:info@eventtoxi.online"
+        >info@eventtoxi.online</a
+      >
+    </p>
+    <div class="contact-socials-wrapper">
+      <p class="contact-solials-text">Social:</p>
+      <ul class="contact-list">
+        <li class="contact-list-item">
+          <a href="" class="contact-item-link">
+            <svg class="socials-icon" width="32" height="32">
+              <use href="./img/sprite.svg#icon-instagram"></use></svg
+          ></a>
+        </li>
+        <li class="contact-list-item">
+          <a href="" class="contact-item-link">
+            <svg class="socials-icon" width="32" height="32">
+              <use href="./img/sprite.svg#icon-twitter"></use></svg
+          ></a>
+        </li>
+        <li class="contact-list-item">
+          <a href="" class="contact-item-link">
+            <svg class="socials-icon" width="32" height="32">
+              <use href="./img/sprite.svg#icon-youtube"></use></svg
+          ></a>
+        </li>
+      </ul>
+    </div>
+    <p class="contact-hashtags-text">
+      Hashtags to use when sharing:
+      <span class="contact-hashtags-span"
+        >#EventToxi #ToxiTournaments #PuzzlePlayLive</span
+      >
+    </p>
+    <p class="contact-bottom-text">EventToxi LLC</p>
   </div>
 </section>
