--- a/src/partials/services.html
+++ b/src/partials/services.html
@@ -1,4 +1,4 @@
-<section class="section services-section" id="home">
+<section class="section services-section" id="services">
   <div class="container services-container">
     <div class="section-title-wrapper">
       <span class="section-title-dot"></span>
