--- a/src/scss/components/contact.scss
+++ b/src/scss/components/contact.scss
@@ -1,29 +1,20 @@
 .contact-section {
-}
-
-.contact-wrapper {
-  padding-top: 80px;
-  padding-bottom: 80px;
-  background-image: url(../img/contact/contact-bg-mob.png);
-  background-repeat: no-repeat;
-  background-position: bottom right;
-  background-size: auto;
-  max-width: 375px;
-  margin: 0 auto;
+  padding-top: 40px;
+  padding-bottom: 40px;
 
   @include media(desktop) {
-    background-image: url(../img/contact/contact-bg-desk.png);
-    max-width: 1440px;
+    padding-top: 80px;
+    padding-bottom: 80px;
   }
 }
 
 .contact-text {
-  font-family: 'Figtree', sans-serif;
+  font-family: 'Teachers', sans-serif;
   font-weight: 500;
   font-size: 18px;
   line-height: 1.5;
-  color: #232533;
-  margin-bottom: 16px;
+  color: #3c234f;
+  margin-bottom: 24px;
 
   @include media(desktop) {
     font-size: 20px;
@@ -31,11 +22,11 @@
 }
 
 .contact-email-text {
-  font-family: 'Figtree', sans-serif;
+  font-family: 'Teachers', sans-serif;
   font-weight: 500;
   font-size: 18px;
   line-height: 1.5;
-  color: #232533;
+  color: #3c234f;
   margin-bottom: 16px;
 
   @include media(desktop) {
@@ -52,30 +43,71 @@
   }
 }
 
+.contact-socials-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  margin-bottom: 24px;
+}
+
 .contact-solials-text {
-  font-family: 'Figtree', sans-serif;
+  font-family: 'Teachers', sans-serif;
   font-weight: 500;
   font-size: 18px;
   line-height: 1.5;
-  color: #232533;
+  color: #3c234f;
 
   @include media(desktop) {
     font-size: 20px;
   }
 }
 
+.contact-list {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+
+  @include media(desktop) {
+    gap: 32px;
+  }
+}
+
+.contact-item-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .contact-hashtags-text {
-  font-family: 'Figtree', sans-serif;
+  font-family: 'Teachers', sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.5;
+  color: #3c234f;
+
+  @include media(desktop) {
+    font-size: 20px;
+  }
+}
+
+.contact-hashtags-span {
   font-weight: 400;
   font-size: 16px;
-  line-height: 1.5;
-  color: #232533;
+  color: #9e54d7;
 
   @include media(desktop) {
     font-size: 18px;
   }
 }
 
-.contact-hashtags-span {
-  color: #126fff;
+.contact-bottom-text {
+  font-family: 'Teachers', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #615c65;
+
+  @include media(desktop) {
+    font-size: 18px;
+  }
 }
