--- a/src/scss/components/menu.scss
+++ b/src/scss/components/menu.scss
@@ -23,7 +23,7 @@
 
 .close-btn {
   display: none;
-  background-color: #fff;
+  background: #f0f0f0;
   border-radius: 32px;
   justify-content: center;
   align-items: center;
@@ -41,7 +41,7 @@
 }
 
 .close-icon {
-  stroke: #232533;
+  stroke: #3c234f;
 }
 
 .context-nav {
