--- a/src/scss/components/testimonials.scss
+++ b/src/scss/components/testimonials.scss
@@ -4,19 +4,15 @@
 }
 
 .testimonials-section-wrapper {
-  padding-top: 80px;
-  padding-bottom: 80px;
-  background-image: url(../img/testimonials/testimonials-bg-mob.png);
-  background-repeat: no-repeat;
-  background-position: top right;
-  background-size: auto;
+  padding-top: 40px;
+  padding-bottom: 40px;
   max-width: 375px;
   margin: 0 auto;
   overflow: hidden;
 
   @include media(desktop) {
-    padding-bottom: 16px;
-    background-image: url(../img/testimonials/testimonials-bg-desk.png);
+    padding-top: 80px;
+    padding-bottom: 80px;
     max-width: 1440px;
   }
 }
@@ -26,13 +22,12 @@
 }
 
 .testimonials-swiper-container {
-  max-width: 343px;
+  max-width: 256px;
   margin-left: auto;
   margin-right: auto;
 
   @include media(desktop) {
-    max-width: 928px;
-    overflow: hidden;
+    max-width: 1120px;
   }
 }
 
@@ -41,34 +36,39 @@
 }
 
 .testimonials-slide {
-  max-width: 343px;
+  max-width: 256px;
 
   @include media(desktop) {
-    max-width: 928px;
   }
 }
 
-.testimonials-text {
-  font-family: 'Figtree', sans-serif;
-  font-weight: 500;
-  font-size: 22px;
-  line-height: 1.3;
-  color: #232533;
-  margin-bottom: 32px;
+.testimonials-avatar-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  margin-bottom: 16px;
+}
 
-  @include media(desktop) {
-    font-size: 28px;
-  }
+.testimonials-avatar {
+  background: #e0d2ff;
+  border-radius: 30px;
+  padding: 14px;
+  font-family: 'Teachers', sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.5;
+  color: #3c234f;
+}
+
+.testimonials-name-wrapper {
 }
 
 .testimonials-name {
-  font-family: 'Figtree', sans-serif;
+  font-family: 'Teachers', sans-serif;
   font-weight: 500;
   font-size: 18px;
   line-height: 1.5;
-  text-align: right;
-  color: #126fff;
-  margin-bottom: 8px;
+  color: #3c234f;
 
   @include media(desktop) {
     font-size: 20px;
@@ -76,65 +76,22 @@
 }
 
 .testimonials-profession {
-  font-family: 'Figtree', sans-serif;
+  font-family: 'Teachers', sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.5;
+  color: #615c65;
+}
+
+.testimonials-text {
+  font-family: 'Teachers', sans-serif;
+  font-style: italic;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
-  text-align: right;
-  color: #126fff;
+  color: #3c234f;
 
   @include media(desktop) {
     font-size: 18px;
-  }
-}
-
-.arrow-icon {
-}
-
-.controls {
-  display: flex;
-  justify-content: end;
-  align-items: center;
-  gap: 35px;
-  margin-top: 40px;
-
-  @include media(desktop) {
-    justify-content: space-between;
-    max-width: 1120px;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    top: -220px;
-    margin-top: 0;
-  }
-}
-
-.arrow-btn {
-  background: #126fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 32px;
-  width: 64px;
-  height: 64px;
-  transition: transform 0.3s ease-in-out;
-
-  &:active {
-    transform: scale(0.9);
-  }
-
-  @include media(desktop) {
-    &:hover {
-      transform: scale(1.1);
-    }
-  }
-
-  &[disabled] {
-    opacity: 0.5;
-    cursor: not-allowed;
-
-    &:hover {
-      transform: none;
-    }
   }
 }
