--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,8 +6,9 @@
 @import './components/features.scss';
 @import './components/services.scss';
 @import './components/works.scss';
+@import './components/studies.scss';
 @import './components/testimonials.scss';
-@import './components/pricing.scss';
+@import './components/faq.scss';
 @import './components/contact.scss';
 @import './components/footer.scss';
 @import './components/banner.scss';
